--- a/Themes/rsr/metrics.ini
+++ b/Themes/rsr/metrics.ini
@@ -1,6 +1,13 @@
 [Global]
 FallbackTheme=_fallback
 
+[FadingBanner]
+BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;accelerate,0.05;glow,Color.Alpha( Color("White"), 0.45 );decelerate,0.075;diffusealpha,0;glow,Color("Invisible");
+BannerOnCommand=
+BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;linear,0.1;glow,Color.Alpha(Color("White"),0.25);decelerate,0.15;glow,Color.Invisible;diffusealpha,0
+BannerFadeOffCommand=diffusealpha,1;stoptweening;linear,0.1;diffusealpha,0
+BannerResetFadeCommand=diffusealpha,1
+
 [ScreenWithMenuElements]
 ShowHeader=true
 HeaderX=SCREEN_CENTER_X
@@ -43,8 +50,73 @@ ScrollerY=SCREEN_CENTER_Y
 ScrollerColors="Exit:#ff0000"
 
 [ScreenSelectMusic]
+BannerX=SCREEN_CENTER_X-160
+BannerY=SCREEN_CENTER_Y-120
+
 MusicWheelX=SCREEN_RIGHT-128-18
 MusicWheelOnCommand=draworder,-1
+
+[StepsDisplay]
+FrameX=0
+FrameY=0
+FrameOnCommand=
+FrameLoadCommand=
+FrameSetCommand=%function(self,param) if param.CustomDifficulty then self:diffuse(CustomDifficultyToDarkColor(param.CustomDifficulty)) end end
+
+NumTicks=10
+MaxTicks=10
+TicksX=0
+TicksY=0
+TicksOnCommand=shadowlength,0;
+TicksSetCommand=%function(self,param) end;
+
+MeterX=(128+32)/2
+MeterY=-1
+MeterOnCommand=textglowmode,"TextGlowMode_Inner";shadowlength,1.5;
+MeterSetCommand=%function(self,param) \
+	if param.CustomDifficulty then \
+		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
+	end; \
+	if param.Meter then \
+		if param.Meter >= 100 then \
+			self:basezoom(0.8); \
+			self:glowshift(); \
+		elseif param.Meter >= 10 then \
+			self:basezoom(1); \
+			self:glowshift(); \
+		else \
+			self:basezoom(1); \
+			self:stopeffect(); \
+		end; \
+	end; \
+end;
+#
+ShowDescription=true
+DescriptionX=(-32)/2
+DescriptionY=-1
+DescriptionOnCommand=shadowlength,1.5;
+DescriptionSetCommand=%function(self,param) \
+	if self:GetText() == "" then \
+		self:settext("Edit"); \
+	end; \
+	if param.CustomDifficulty then \
+		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
+	end; \
+end;
+#
+ShowAutogen=false
+AutogenX=0
+AutogenY=0
+AutogenOnCommand=
+AutogenSetCommand=
+AutogenTweenOnCommand=
+AutogenTweenOffCommand=
+#
+ShowStepsType=false
+StepsTypeX=0
+StepsTypeY=0
+StepsTypeOnCommand=
+
 [MusicWheel]
 ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 	self:x( (1-math.cos(offsetFromCenter/math.pi))*0 ) \
