small changes to roulette item
(Sourced from shakesoda/stepmania.)

--- a/Themes/dimension-tripper/metrics.ini
+++ b/Themes/dimension-tripper/metrics.ini
@@ -32,7 +32,7 @@ Text1FormatFunction=function(time) \
 	return string.format("%0.0f", math.floor(time)) \
 end
 Text2OnCommand=stopeffect;stoptweening;vertalign,bottom;horizalign,left;zoom,0.6;shadowlengthy,1
-Text2FormatFunction=function(time) local remainder=time-math.floor(time); local digit=math.floor(remainder*100); return string.format("%02.0f", digit) end
+Text2FormatFunction=function(time) local remainder=time-math.floor(time); local digit=math.ceil(remainder*100); return string.format("%02.0f", digit) end
 FrameOnCommand=
 Warning10Command=diffuseshift;effectperiod,1;effectcolor2,Color("Red");effectcolor1,color("0.5,0,0,1");
 
@@ -145,7 +145,7 @@ SectionCollapsedY=0
 SectionCollapsedOnCommand=maxwidth,194;horizalign,left;shadowcolor,color("0.1,0.1,0.1,0.2")
 SectionCountX=Theme.MusicWheelItemWidth()/2-20
 SectionCountOnCommand=zoom,0.75;strokecolor,Color("Outline")
-RouletteOnCommand=maxwidth,400;shadowlength,1;basezoom,0.75;rainbowscroll,true;pulse;effectmagnitude,1,1.125,1;effectperiod,3
+RouletteOnCommand=maxwidth,400;shadowlength,1;basezoom,1.0;rainbowscroll,true;pulse;effectmagnitude,1,1.125,1;effectperiod,3
 SortX=-132
 SortY=-2
 SortOnCommand=maxwidth,256;horizalign,left;shadowlength,1;shadowcolor,color("0,0,0,0.325")
