--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1497,12 +1497,12 @@ DeltaSecondsP2OffCommand=
 ScoreP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # ScoreP1X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 ScoreP1Y=SCREEN_BOTTOM-48
-ScoreP1OnCommand=draworder,101;visible,not GAMESTATE:GetCurrentCourse():GetCourseType() == "CourseType_Survival" and ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_1);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-48
+ScoreP1OnCommand=draworder,101;visible,(GAMESTATE:GetCurrentCourse() == nil or GAMESTATE:GetCurrentCourse():GetCourseType() ~= "CourseType_Survival") and ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_1);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-48
 ScoreP1OffCommand=
 ScoreP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # ScoreP2X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 ScoreP2Y=SCREEN_BOTTOM-48
-ScoreP2OnCommand=draworder,101;visible,not GAMESTATE:GetCurrentCourse():GetCourseType() == "CourseType_Survival" and ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_2);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-48
+ScoreP2OnCommand=draworder,101;visible,(GAMESTATE:GetCurrentCourse() == nil or GAMESTATE:GetCurrentCourse():GetCourseType() ~= "CourseType_Survival") and ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_2);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-48
 ScoreP2OffCommand=
 #
 StepsDescriptionP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
