dtripper: new background, fix up wheel a bit
(Sourced from shakesoda/stepmania.)

--- a/Themes/dimension-tripper/metrics.ini
+++ b/Themes/dimension-tripper/metrics.ini
@@ -110,7 +110,7 @@ BannerOnCommand=scaletoclipped,256,80
 
 MusicWheelX=SCREEN_CENTER_X
 MusicWheelY=SCREEN_CENTER_Y-150
-MusicWheelOnCommand=draworder,-1
+MusicWheelOnCommand=draworder,-1;SetDrawByZPosition,true
 
 [MusicWheel]
 ItemWidth=math.max(math.ceil(SCREEN_WIDTH/3), 220)
@@ -120,6 +120,7 @@ ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 	local threshold, distance = 1, Theme.MusicWheelItemWidth() \
 	function sign(x) return x > 0 and 1 or x < 0 and -1 or 0 end \
 	self:y((math.abs(offsetFromCenter)-1) * 70) \
+	self:z(-math.abs(offsetFromCenter)) \
 	if offsetFromCenter < threshold and offsetFromCenter > -threshold then \
 		self:x(offsetFromCenter * distance) \
 		self:y(0) \
