even more rsr stuff
helpdisplay + difficulties. which color is best on sstitle?

(Sourced from shakesoda/stepmania.)

--- a/Themes/rsr/metrics.ini
+++ b/Themes/rsr/metrics.ini
@@ -1,13 +1,6 @@
 [Global]
 FallbackTheme=_fallback
 
-[FadingBanner]
-BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;accelerate,0.05;glow,Color.Alpha( Color("White"), 0.45 );decelerate,0.075;diffusealpha,0;glow,Color("Invisible");
-BannerOnCommand=
-BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;linear,0.1;glow,Color.Alpha(Color("White"),0.25);decelerate,0.15;glow,Color.Invisible;diffusealpha,0
-BannerFadeOffCommand=diffusealpha,1;stoptweening;linear,0.1;diffusealpha,0
-BannerResetFadeCommand=diffusealpha,1
-
 [ScreenWithMenuElements]
 ShowHeader=true
 HeaderX=SCREEN_CENTER_X
@@ -21,6 +14,13 @@ FooterX=SCREEN_CENTER_X
 FooterY=SCREEN_BOTTOM
 FooterOnCommand=
 FooterOffCommand=
+
+#
+ShowHelpDisplay=true
+HelpDisplayX=SCREEN_CENTER_X
+HelpDisplayY=SCREEN_BOTTOM-48+4
+HelpDisplayOnCommand=shadowlength,1.5
+HelpDisplayOffCommand=
 
 #
 TimerX=SCREEN_RIGHT-16
@@ -56,12 +56,18 @@ BannerY=SCREEN_CENTER_Y-120
 MusicWheelX=SCREEN_RIGHT-128-18
 MusicWheelOnCommand=draworder,-1
 
+ShowDifficultyIconRow=true
+DifficultyIconRowX=SCREEN_CENTER_X-160-96-16
+DifficultyIconRowY=SCREEN_CENTER_Y-120+56
+DifficultyIconRowOnCommand=
+DifficultyIconRowOffcommand=
+
 [StepsDisplay]
 FrameX=0
 FrameY=0
 FrameOnCommand=
 FrameLoadCommand=
-FrameSetCommand=%function(self,param) if param.CustomDifficulty then self:diffuse(CustomDifficultyToDarkColor(param.CustomDifficulty)) end end
+FrameSetCommand=%function(self,param) if param.CustomDifficulty then self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)) end end
 
 NumTicks=10
 MaxTicks=10
@@ -94,13 +100,13 @@ end;
 ShowDescription=true
 DescriptionX=(-32)/2
 DescriptionY=-1
-DescriptionOnCommand=shadowlength,1.5;
+DescriptionOnCommand=shadowlength,1.5;maxwidth,128+32-4
 DescriptionSetCommand=%function(self,param) \
 	if self:GetText() == "" then \
 		self:settext("Edit"); \
 	end; \
 	if param.CustomDifficulty then \
-		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
+		self:diffuse(CustomDifficultyToLightColor(param.CustomDifficulty)); \
 	end; \
 end;
 #
