Add names to life meter/meter display items
I would've added commands but I'm not sure where they get run from (or
if they get run at all), so that's a job for later.

(Sourced from shakesoda/stepmania.)

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -377,6 +377,12 @@ CancelAll=""
 [CombinedLifeMeterTug]
 # We don't use it.
 MeterWidth=0.0
+#-----#
+SeparatorOnCommand=
+SeparatorOffCommand=
+#-----#
+FrameOnCommand=
+FrameOffCommand=
 
 [Combo]
 # System Direction
