--- a/src/archutils/Win32/WindowsResources.rc
+++ b/src/archutils/Win32/WindowsResources.rc
@@ -201,8 +201,8 @@ BEGIN
             VALUE "CompanyName", "StepMania Team \n http://www.stepmania.com/"
             VALUE "FileDescription", "StepMania"
             VALUE "FileVersion", "5, 0, 0, 0"
-            VALUE "InternalName", "sm-ssc v1.3.3"
-            VALUE "LegalCopyright", "Copyright © 2001-2012"
+            VALUE "InternalName", "StepMania 5"
+            VALUE "LegalCopyright", "Copyright © 2001-2013"
             VALUE "OriginalFilename", "StepMania.exe"
             VALUE "ProductName", "StepMania"
             VALUE "ProductVersion", "5, 0, 0, 0"
