Fix routine theme errors; do not force typical pump options behavior

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1159,7 +1159,6 @@ RequireStepOnMines=false
 InitialHoldLife=IsGame("pump") and 0.05 or 1
 MaxHoldLife=1
 RollBodyIncrementsCombo=false
-#ScoreMissedHoldsAndRolls=not IsGame("pump")
 ScoreMissedHoldsAndRolls=not IsGame("pump") and not IsGame("dance")
 PercentUntilColorCombo=0.25
 ComboStoppedAt=50
@@ -1816,7 +1815,7 @@ UpdateOnMessage=""
 #
 NumChoicesOnPage1=100
 DefaultChoice="GameStart"
-ChoiceNames="GameStart,Options,Edit,Jukebox,ReportBug,IRC,Exit"
+ChoiceNames="GameStart,Options,Edit,Jukebox,GameSelect,Exit"
 ChoiceGameStart="applydefaultoptions;text,Game Start;screen,"..Branch.StartGame()
 #ChoiceQuickPlay="applydefaultoptions;text,Quick Play;"
 ChoiceOptions="screen,ScreenOptionsService;text,Options"
@@ -2085,8 +2084,8 @@ ChangeGroupsWithGameButtons=false
 PreviousGroupButton="MenuUp"
 NextGroupButton="MenuDown"
 #
-TwoPartSelection=IsGame("pump")
-TwoPartConfirmsOnly=IsGame("pump")
+TwoPartSelection=false
+TwoPartConfirmsOnly=false
 TwoPartTimerSeconds=30
 #
 SampleMusicDelay=0.25
