--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -686,9 +686,6 @@ NetworkStatusY=SCREEN_BOTTOM-64
 NetworkStatusOnCommand=halign,0;
 NetworkStatusOffCommand=linear,0.5;cropright,1
 #
-#
-ChoiceNames="GameStart,Options,Edit,Jukebox,Exit"
-DefaultChoice="GameStart"
 
 [ScreenQuickSetupOverview]
 IconStartX=SCREEN_CENTER_X-160
@@ -1408,12 +1405,12 @@ SongTitleOffCommand=
 #
 SongMeterDisplayP1X=Center1Player() and SCREEN_CENTER_X or SCREEN_LEFT+16
 SongMeterDisplayP1Y=Center1Player() and SCREEN_TOP+60 or SCREEN_CENTER_Y-32
-SongMeterDisplayP1OnCommand=draworder,5;rotationz,Center1Player() and 0 or -90;zoom,0;addx,-24;sleep,1.5;decelerate,0.5;zoom,1;addx,24
+SongMeterDisplayP1OnCommand=draworder,5;rotationz,Center1Player() and 0 or -90;zoom,0;addx,-24;sleep,1.5;decelerate,0.5;zoom,1;addx,24;hide_if,(GAMESTATE:GetCurrentStyle():GetStyleType() == "StyleType_TwoPlayersSharedSides") and GAMESTATE:GetMasterPlayerNumber() ~= PLAYER_1
 SongMeterDisplayP1OffCommand=
 #
 SongMeterDisplayP2X=Center1Player() and SCREEN_CENTER_X or SCREEN_RIGHT-16
 SongMeterDisplayP2Y=Center1Player() and SCREEN_TOP+60 or SCREEN_CENTER_Y-32
-SongMeterDisplayP2OnCommand=draworder,5;rotationz,Center1Player() and 0 or -90;zoom,0;addx,24;sleep,1.5;decelerate,0.5;zoom,1;addx,-24
+SongMeterDisplayP2OnCommand=draworder,5;rotationz,Center1Player() and 0 or -90;zoom,0;addx,24;sleep,1.5;decelerate,0.5;zoom,1;addx,-24;hide_if,(GAMESTATE:GetCurrentStyle():GetStyleType() == "StyleType_TwoPlayersSharedSides") and GAMESTATE:GetMasterPlayerNumber() ~= PLAYER_2
 SongMeterDisplayP2OffCommand=
 #
 ShowBPMDisplay=true
@@ -1439,13 +1436,13 @@ ScoreFrameOffCommand=
 LifeP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # LifeP1X=(GAMESTATE:GetCurrentStyle():GetStyleType() == 'StyleType_OnePlayerTwoSides' or (PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1)) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 LifeP1Y=SCREEN_TOP+24
-LifeP1OnCommand=finishtweening;addy,-48;sleep,1.25;bounceend,0.35;addy,48;
+LifeP1OnCommand=finishtweening;addy,-48;sleep,1.25;bounceend,0.35;addy,48;hide_if,(GAMESTATE:GetCurrentStyle():GetStyleType() == "StyleType_TwoPlayersSharedSides") and GAMESTATE:GetMasterPlayerNumber() ~= PLAYER_1
 #~ LifeP1OnCommand=addx,-SCREEN_CENTER_X;sleep,1.25;decelerate,0.35*0.25;addx,SCREEN_CENTER_X*1.5;accelerate,0.35*0.25;addx,-SCREEN_CENTER_X*0.25;bounceend,0.35*0.25;addx,-SCREEN_CENTER_X*0.25
 LifeP1OffCommand=
 LifeP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # LifeP2X=(GAMESTATE:GetCurrentStyle():GetStyleType() == 'StyleType_OnePlayerTwoSides' or (PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1)) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 LifeP2Y=SCREEN_TOP+24
-LifeP2OnCommand=finishtweening;zoomx,-1;addy,-48;sleep,1.25;bounceend,0.35;addy,48;
+LifeP2OnCommand=finishtweening;zoomx,-1;addy,-48;sleep,1.25;bounceend,0.35;addy,48;hide_if,(GAMESTATE:GetCurrentStyle():GetStyleType() == "StyleType_TwoPlayersSharedSides") and GAMESTATE:GetMasterPlayerNumber() ~= PLAYER_2
 #~ LifeP2OnCommand=zoomx,-1;addx,SCREEN_CENTER_X;sleep,1.25;decelerate,0.35*0.25;addx,-SCREEN_CENTER_X*1.5;accelerate,0.35*0.25;addx,SCREEN_CENTER_X*0.25;bounceend,0.35*0.25;addx,SCREEN_CENTER_X*0.25
 LifeP2OffCommand=
 CombinedLifeX=SCREEN_CENTER_X
@@ -1497,12 +1494,12 @@ DeltaSecondsP2OffCommand=
 ScoreP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # ScoreP1X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 ScoreP1Y=SCREEN_BOTTOM-48
-ScoreP1OnCommand=draworder,101;visible,(GAMESTATE:GetCurrentCourse() == nil or GAMESTATE:GetCurrentCourse():GetCourseType() ~= "CourseType_Survival") and ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_1);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-48
+ScoreP1OnCommand=draworder,101;visible,(GAMESTATE:GetCurrentCourse() == nil or GAMESTATE:GetCurrentCourse():GetCourseType() ~= "CourseType_Survival") and ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_1);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-48;hide_if,(GAMESTATE:GetCurrentStyle():GetStyleType() == "StyleType_TwoPlayersSharedSides") and GAMESTATE:GetMasterPlayerNumber() ~= PLAYER_1
 ScoreP1OffCommand=
 ScoreP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # ScoreP2X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 ScoreP2Y=SCREEN_BOTTOM-48
-ScoreP2OnCommand=draworder,101;visible,(GAMESTATE:GetCurrentCourse() == nil or GAMESTATE:GetCurrentCourse():GetCourseType() ~= "CourseType_Survival") and ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_2);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-48
+ScoreP2OnCommand=draworder,101;visible,(GAMESTATE:GetCurrentCourse() == nil or GAMESTATE:GetCurrentCourse():GetCourseType() ~= "CourseType_Survival") and ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_2);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-48;hide_if,(GAMESTATE:GetCurrentStyle():GetStyleType() == "StyleType_TwoPlayersSharedSides") and GAMESTATE:GetMasterPlayerNumber() ~= PLAYER_2
 ScoreP2OffCommand=
 #
 StepsDescriptionP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
