Themes/default: Fix header alignment, make the background checkboard less gaudy Themes/: remove anything we don't ship with.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -513,9 +513,17 @@ Fallback="StepsDisplay"
 	# self:effectclock('beatnooffset'); \
 # end;
 PillTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
+	local offset = itemIndex / numItems \
+	local rate = 4 \
 	local fItemWidth = ( 256 / numItems ) \
 	self:x( ((itemIndex-(numItems/2))*fItemWidth) + ( numItems / 2 ) ); \
 	self:zoomtowidth(fItemWidth); \
+	self:diffuseramp(); \
+	self:effectcolor2(color("1,1,1,1")); \
+	self:effectcolor1(color("0.5,0.5,0.5,1")); \
+	self:effectclock('beat'); \
+	self:effecttiming(rate*0.25,rate*0.75,rate*0.25,rate*0.75); \
+	self:effectoffset(1.25-offset); \
 end;
 # PillTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 	# local fItemWidth = ( 256 / numItems ) \
@@ -542,9 +550,9 @@ ArtistPrependString=""
 
 [ScreenSystemLayer]
 ShowClock=true
-CreditsP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,PlayerColor(PLAYER_1);
+CreditsP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.675;shadowlength,1;
 #
-CreditsP2OnCommand=horizalign,right;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,PlayerColor(PLAYER_2);
+CreditsP2OnCommand=horizalign,right;vertalign,bottom;zoom,0.675;shadowlength,1;
 
 [ScreenConsoleOverlay]
 
@@ -586,7 +594,7 @@ AlternateHelpDisplayOnCommand=SetSecsBetweenSwitches,4;zoom,0.675;maxwidth,480/0
 AlternateHelpDisplayOffCommand=linear,0.175;zoomy,0
 
 TimerX=SCREEN_RIGHT-36-4
-TimerY=SCREEN_TOP+22
+TimerY=SCREEN_TOP+24
 TimerOnCommand=draworder,6;visible,PREFSMAN:GetPreference("MenuTimer");
 # TimerOnCommand=fov,90;vanishpoint,SCREEN_RIGHT-36-4,SCREEN_TOP+20;draworder,5;visible,PREFSMAN:GetPreference("MenuTimer");rotationy,90;decelerate,0.4;rotationy,0;
 TimerOffCommand=
