Actually use system libpng instead of detecting and then effectively ignoring it.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -699,8 +699,7 @@ main_CPPFLAGS = \
 	-I$(top_srcdir)/extern/jsoncpp/include
 #-I$(top_srcdir)/extern/glew-1.5.8/include
 
-main_SOURCES = $(PNG) \
-		$(Screens) \
+main_SOURCES = $(Screens) \
 		$(DataStructures) \
 		$(FileTypes) \
 		$(StepMania) \
