Increment version to "StepMania 5 Beta 2b"

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -522,7 +522,7 @@ PillTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 	self:effectcolor2(color("1,1,1,1")); \
 	self:effectcolor1(color("0.5,0.5,0.5,1")); \
 	self:effectclock('beat'); \
-	self:effecttiming(rate*0.25,rate*0.75,rate*0.25,rate*0.75); \
+	self:effecttiming(rate*0.75,rate*0.125,rate*0.125,0); \
 	self:effectoffset(1.25-offset); \
 end;
 # PillTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
@@ -1431,7 +1431,7 @@ BPMDisplayOffCommand=bounceend,0.25;zoom,0
 ShowStageDisplay=true
 StageDisplayX=SCREEN_CENTER_X
 StageDisplayY=Center1Player() and SCREEN_BOTTOM-76 or SCREEN_BOTTOM-50
-StageDisplayOnCommand=draworder,102
+StageDisplayOnCommand=draworder,DrawOrder.Screen
 StageDisplayOffCommand=bounceend,0.25;zoom,0
 StageDisplayUseShortString=true
 #
