Bug#991 fix pt2/2: Do not filter out StepsType_lights_cabinet; in the cases where it would be selected, we want it to be displayed.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -34,8 +34,10 @@ DefaultNoteSkinName="default"
 DifficultiesToShow="beginner,easy,medium,hard,challenge"
 # Same as above, but for courses.
 CourseDifficultiesToShow="easy,medium,hard"
-# Things to hide. You couldn't play cabinet anyways.
-StepsTypesToHide="lights-cabinet"
+# Things to hide.
+# StepsType_lights_cabinet will only be shown in lights mode. And we want it to
+# be shown in lights mode! So don't hide it here.
+StepsTypesToHide=""
 
 # The number of entries before "Various" is shown on the BPMDisplay, etc.
 MaxCourseEntriesBeforeShowVarious=10
