Make PercentScoreWeight* and GradeWeight* theme metrics instead of preferences

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1349,6 +1349,30 @@ FrameOverP2Y=
 FrameOverP2OnCommand=
 FrameOverP2OffCommand=
 
+[ScoreKeeperNormal]
+PercentScoreWeightCheckpointHit=0
+PercentScoreWeightCheckpointMiss=0
+PercentScoreWeightHeld=3
+PercentScoreWeightHitMine=-2
+PercentScoreWeightLetGo=0
+PercentScoreWeightMiss=0
+PercentScoreWeightW1=3
+PercentScoreWeightW2=2
+PercentScoreWeightW3=1
+PercentScoreWeightW4=0
+PercentScoreWeightW5=0
+GradeWeightCheckpointHit=0
+GradeWeightCheckpointMiss=0
+GradeWeightHeld=6
+GradeWeightHitMine=-8
+GradeWeightLetGo=0
+GradeWeightMiss=-8
+GradeWeightW1=2
+GradeWeightW2=2
+GradeWeightW3=1
+GradeWeightW4=0
+GradeWeightW5=-4
+
 [ScoreKeeperRave]
 AttackDurationSeconds=3.0
 
