Scoring and grade behavior more faithful to PiU in Pump mode

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -656,8 +656,8 @@ LifePercentChangeW4=0.000
 LifePercentChangeW5=-0.040
 LifePercentChangeMiss=-0.080
 LifePercentChangeHitMine=-0.160
-LifePercentChangeHeld=0.008
-LifePercentChangeLetGo=-0.080
+LifePercentChangeHeld=IsGame("Pump") and 0.000 or 0.008
+LifePercentChangeLetGo=IsGame("Pump") and 0.000 or -0.080
 LifePercentChangeCheckpointMiss=-0.080
 LifePercentChangeCheckpointHit=0.008
 
@@ -1350,9 +1350,9 @@ FrameOverP2OnCommand=
 FrameOverP2OffCommand=
 
 [ScoreKeeperNormal]
-PercentScoreWeightCheckpointHit=0
+PercentScoreWeightCheckpointHit=3
 PercentScoreWeightCheckpointMiss=0
-PercentScoreWeightHeld=3
+PercentScoreWeightHeld=IsGame("Pump") and 0 or 3
 PercentScoreWeightHitMine=-2
 PercentScoreWeightLetGo=0
 PercentScoreWeightMiss=0
@@ -1361,9 +1361,9 @@ PercentScoreWeightW2=2
 PercentScoreWeightW3=1
 PercentScoreWeightW4=0
 PercentScoreWeightW5=0
-GradeWeightCheckpointHit=0
-GradeWeightCheckpointMiss=0
-GradeWeightHeld=6
+GradeWeightCheckpointHit=2
+GradeWeightCheckpointMiss=-8
+GradeWeightHeld=IsGame("Pump") and 0 or 6
 GradeWeightHitMine=-8
 GradeWeightLetGo=0
 GradeWeightMiss=-8
